--- a/Organisation/Einstellungen/einstellungen.html
+++ b/Organisation/Einstellungen/einstellungen.html
@@ -64,11 +64,11 @@
         <div class="card mb-3">
           <div class="card-body">
             <h2 class="card-title">Allgemeine Informationen</h2>
-            <p class="card-text" id="vorname"></p>
-            <p class="card-text" id="nachname"></p>
+            <p class="card-text" id="name"></p>
             <p class="card-text" id="anschrift"></p>
-            <p class="card-text" id="telefon"></p>
-            <p class="card-text" id="email"> </p>
+            <p class="card-text" id="vornameAnsprech"></p>
+            <p class="card-text" id="nachnameAnsprech"> </p>
+            <p class="card-text" id="telefonAnsprech"> </p>
 
             <button id="buttonAllgInfoBearbeiten" type="button" class="btn btn-primary">Bearbeiten</button>
           </div>
