--- a/Admin/Veranstaltungen/veranstaltungen.html
+++ b/Admin/Veranstaltungen/veranstaltungen.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     rel="stylesheet">
   <link rel="stylesheet" href="../../main.css">
-  <link rel="stylesheet" href="impressum.css">
+  <link rel="stylesheet" href="veranstaltungenAmin.css">
 
   <title>Veranstaltungen</title>
 </head>
@@ -56,8 +56,45 @@
     </div>
   </nav>
 
+  <!--Inhalt-->
+  <div id="veranstaltungsgruppennichtoffen-container">
+    <div class="container">
+      <div class="row" id="veranstaltsungsgruppennichtoffen">
+        <!-- Hier werden die Bootstrap Cards dynamisch eingefügt -->
+      </div>
+    </div>
+  </div>
+
+  <div id="veranstaltungsgruppen-container">
+    <div class="container">
+      <div class="row" id="veranstaltungsgruppen">
+        <!-- Hier werden die Bootstrap Cards dynamisch eingefügt -->
+      </div>
+    </div>
+  </div>
+
+  <div id="veranstaltungen-container" style="display: none;">
+    <!-- Hier werden Veranstaltungen angezeigt -->
+    <div class="container">
+      <div class="row" id="veranstaltungsgruppenDetails">
+        <!-- Hier werden die Bootstrap Cards dynamisch eingefügt -->
+      </div>
+    </div>
+  </div>
+
+  <div id="veranstaltungeneinzel-container" style="display: none;">
+    <!-- Hier werden Veranstaltungen angezeigt -->
+    <div class="container">
+      <div class="row" id="veranstaltungsgruppenDetailsVeranstaltung">
+        <!-- Hier werden die Bootstrap Cards dynamisch eingefügt -->
+      </div>
+    </div>
+  </div>
+  <!--Inhalt-->
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
+  <script src="veranstaltungenAdmin.js"></script>
 
    </body>
 </html>
