--- a/Login/loginErstellen.html
+++ b/Login/loginErstellen.html
@@ -238,8 +238,25 @@
       </div>
     </div>
 
-    
-
+<!-- Bootstrap Modal HTML -->
+<div class="modal fade" tabindex="-1" role="dialog" id="successModal">
+  <div class="modal-dialog" role="document">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title">Erfolg!</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal"aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+          <div class="modal-body">
+              Sie erhalten in Kürze eine E-Mail um Ihren Account zu bestätigen.
+          </div>
+          <div class="modal-footer">
+              <button type="button" class="btn btn-secondary close-button">Schließen</button>
+          </div>
+      </div>
+  </div>
+</div>
 
     
     <script src="loginErstellen.js"></script>
