--- a/Login/loginVergessen.html
+++ b/Login/loginVergessen.html
@@ -68,7 +68,7 @@
                           <button type="button" class="btn btn-secondary" id="buttonzurückLogin">Zurück</button>
                         </div>
                         <div class="col-6 text-end">
-                            <button type="button" class="btn btn-primary">Neuen Account erstellen</button>
+                            <button type="button" class="btn btn-primary" onclick="test()">Neuen Account erstellen</button>
                         </div>
                     </div>
                   </div>
@@ -76,6 +76,27 @@
           </div>
       </div>
     </div>
+
+    <!-- Bootstrap Modal HTML -->
+<div class="modal fade" tabindex="-1" role="dialog" id="successModal">
+  <div class="modal-dialog" role="document">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title">Erfolg!</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal"aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+          <div class="modal-body">
+              Sie erhalten in Kürze eine E-Mail mit Anweisungen um Ihr Passwort zurückzusetzen.
+          </div>
+          <div class="modal-footer">
+              <button type="button" class="btn btn-secondary close-button">Schließen</button>
+          </div>
+      </div>
+  </div>
+</div>
+
     <script src="loginVergessen.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
   </body>
