mehr modals und logout.js erstellt

--- a/Login/loginVergessen.html
+++ b/Login/loginVergessen.html
@@ -91,7 +91,7 @@
               Sie erhalten in Kürze eine E-Mail mit Anweisungen um Ihr Passwort zurückzusetzen.
           </div>
           <div class="modal-footer">
-              <button type="button" class="btn btn-secondary close-button">Schließen</button>
+              <button type="button" class="btn btn-secondary close-button" data-bs-dismiss="modal">Schließen</button>
           </div>
       </div>
   </div>
