--- a/Login/loginErstellen.html
+++ b/Login/loginErstellen.html
@@ -118,7 +118,7 @@
                         <div class="mb-3 row">
                             <label for="passwort" class="col-sm-3 col-form-label">Passwort:</label>
                             <div class="col-sm-9">
-                                <input type="password" class="form-control" id="passwort" name="passwort" required>
+                                <input type="password" class="form-control" id="passwort_confirmation" name="passwort" required>
                             </div>
                         </div>
                         <div class="ms-2 mt-1">
@@ -183,7 +183,7 @@
                         <div class="mb-3 row">
                             <label for="passwort" class="col-sm-3 col-form-label">Passwort:</label>
                             <div class="col-sm-9">
-                                <input type="password" class="form-control" id="passwort" name="passwort" required>
+                                <input type="password" class="form-control" id="passwort_confirmation" name="passwort" required>
                             </div>
                         </div>
                         <div class="ms-0">
@@ -229,7 +229,7 @@
                           <button type="button" class="btn btn-secondary" id="buttonzurückLogin">Zurück</button>
                         </div>
                         <div class="col-6 text-end">
-                            <button type="button" class="btn btn-primary" onclick="chooseRegister()">Registrieren</button>
+                            <button type="button" class="btn btn-primary" onclick="validatePassword()">Registrieren</button>
                         </div>
                     </div>
                   </div>
@@ -252,7 +252,29 @@
               Sie erhalten in Kürze eine E-Mail um Ihren Account zu bestätigen.
           </div>
           <div class="modal-footer">
-              <button type="button" class="btn btn-secondary close-button">Schließen</button>
+              <button type="button" class="btn btn-secondary close-button" data-bs-dismiss="modal">Schließen</button>
+          </div>
+      </div>
+  </div>
+</div>
+
+<!-- Info modals bei PWs -->
+
+<!-- Bootstrap Modal HTML -->
+<div class="modal fade" tabindex="-1" role="dialog" id="badModal">
+  <div class="modal-dialog" role="document">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title">Fehler</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal"aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+          <div class="modal-body" id="alert-content">
+              
+          </div>
+          <div class="modal-footer">
+              <button type="button" class="btn btn-secondary close-button" data-bs-dismiss="modal">Schließen</button>
           </div>
       </div>
   </div>
