--- a/Admin/Einstellungen/einstellungenPasswortAendern.html
+++ b/Admin/Einstellungen/einstellungenPasswortAendern.html
@@ -95,6 +95,27 @@
     </div>
   </div>
 
+  <!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 class="modal-title fs-5" id="staticBackdropLabel">Passwort ändern</h3>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Wollen Sie Ihr Passwort wirklich ändern?</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Zurück</button>
+        <button type="button" id="buttonspeichernModal" class="btn btn-danger">Passwort ändern</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
   <script src="einstellungenPasswort.js"></script>
 </body>
