--- a/Admin/Einstellungen/einstellungenPasswortAendern.html
+++ b/Admin/Einstellungen/einstellungenPasswortAendern.html
@@ -76,6 +76,9 @@
           <div id="errorMessage" class="alert alert-danger" style="display: none">
               Fehler bei der Passwortänderung.
           </div>
+          <div id="passwordCount" class="alert alert-danger" style="display: none">
+            Das Passwort muss mindestens 8 Zeichen lang sein und mindestens einen Großbuchstaben, eine Zahl, ein Sonderzeichen und Kleinbuchstaben enthalten.
+          </div>
           <div id="passwordMismatch" class="alert alert-danger" style="display: none">
             Die neuen Passwörter stimmen nicht überein.
         </div>
