--- a/Organisation/Einstellungen/einstellungenPasswortAendern.html
+++ b/Organisation/Einstellungen/einstellungenPasswortAendern.html
@@ -79,6 +79,9 @@
           <div id="passwordMismatch" class="alert alert-danger" style="display: none">
             Die neuen Passwörter stimmen nicht überein.
         </div>
+        <div id="passwordCount" class="alert alert-danger" style="display: none">
+          Das Passwort muss mindestens 8 Zeichen lang sein und mindestens einen Großbuchstaben, eine Zahl, ein Sonderzeichen und Kleinbuchstaben enthalten.
+        </div>
           </div>
           <div class="card-footer">
             <div class="row justify-content-between">
