--- a/Admin/Einstellungen/einstellungenAllgInfoBearbeiten.html
+++ b/Admin/Einstellungen/einstellungenAllgInfoBearbeiten.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="jumbotron mit-lightblue text-center headpad position-relative">
-    <a class="position-absolute h6 top-0 end-0 m-3 mit-blue" id="a-deco" href="../../Login/login.html">Login <img src="../../Bilder/nutzer.png" alt="Nutzer icon" class="mit-head"></a>
+    <a class="position-absolute h6 top-0 end-0 m-3 mit-blue" id="a-deco" href="#" onclick="postLogout()">Logout <img src="../../Bilder/nutzer.png" alt="Nutzer icon" class="mit-head"></a>
     <h1 class="display-5 fw-bold mit-blue">Veranstaltungen <img src="../../Bilder/ZwingenbergWappen.png" alt="Zwingenberg Wappen" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
   </div>
 
@@ -115,6 +115,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
   <script src="einstellungenAllgInfo.js"></script>
+  <script src="../../logout.js"></script>
 
 </body>
 </html>
