--- a/Organisation/Veranstaltungen/veranstaltungen.html
+++ b/Organisation/Veranstaltungen/veranstaltungen.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="veranstaltungenNutzer.css">
 
 
-  <title>Meine Veranstaltungen</title>
+  <title>Veranstaltungen</title>
 </head>
 
 <body>
