--- a/Nutzer/meineVeranstaltungen/meineVeranstaltungen.html
+++ b/Nutzer/meineVeranstaltungen/meineVeranstaltungen.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     rel="stylesheet">
   <link rel="stylesheet" href="../../main.css">
+  <link rel="stylesheet" href="meineVeranstaltung.css">
 
 
   <title>Meine Veranstaltungen</title>
@@ -57,11 +58,18 @@
 
 
   <!--Inhalt-->
+  <div id="meineveranstaltung-container">
+    <div class="container">
+      <div class="row" id="meineveranstaltung">
+          <!-- Hier werden die Bootstrap Cards dynamisch eingefügt -->
+      </div>
+  </div>
+  </div>
   
   <!--Inhalt Ende-->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
-  <script src="../../logout.js"></script>
+  <script src="meineVeranstaltungen.js"></script>
 </body>
 
 </html>
