--- a/Nutzer/meineVeranstaltungen/meineVeranstaltungen.html
+++ b/Nutzer/meineVeranstaltungen/meineVeranstaltungen.html
@@ -69,6 +69,7 @@
   <!--Inhalt Ende-->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
+  <script src="../../logout.js"></script>
   <script src="meineVeranstaltungen.js"></script>
 </body>
 
