meine veranstaltung einzel ansicht

--- a/Nutzer/meineVeranstaltungen/meineVeranstaltungen.html
+++ b/Nutzer/meineVeranstaltungen/meineVeranstaltungen.html
@@ -65,6 +65,15 @@
       </div>
   </div>
   </div>
+
+  <div id="meineveranstaltungeinzel-container" style="display: none;">
+    <!-- Hier werden Veranstaltungen angezeigt -->
+    <div class="container">
+      <div class="row" id="meineveranstaltungEinzelDetails">
+          <!-- Hier werden die Bootstrap Cards dynamisch eingefügt -->
+      </div>
+    </div>
+  </div>
   
   <!--Inhalt Ende-->
 
