--- a/Organisation/MeineVeranstaltungen/meineVeranstaltungen.html
+++ b/Organisation/MeineVeranstaltungen/meineVeranstaltungen.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     rel="stylesheet">
   <link rel="stylesheet" href="../../main.css">
+  <link rel="stylesheet" href="meineVeranstaltungenOrga.css">
 
 
   <title>Meine Veranstaltungen</title>
@@ -57,11 +58,29 @@
 
 
   <!--Inhalt-->
+  <div id="meineveranstaltung-container">
+    <div class="container">
+      <div class="row" id="meineveranstaltung">
+          <!-- Hier werden die Bootstrap Cards dynamisch eingefügt -->
+      </div>
+  </div>
+  </div>
+
+  <div id="meineveranstaltungeinzel-container" style="display: none;">
+    <!-- Hier werden Veranstaltungen angezeigt -->
+    <div class="container">
+      <div class="row" id="meineveranstaltungEinzelDetails">
+          <!-- Hier werden die Bootstrap Cards dynamisch eingefügt -->
+      </div>
+    </div>
+  </div>
+  
   
   <!--Inhalt Ende-->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
   <script src="../../logout.js"></script>
+  <script src="meineVeranstaltungenOrga.js"></script>
 </body>
 
 </html>
