--- a/Login/loginErstellen.html
+++ b/Login/loginErstellen.html
@@ -252,7 +252,7 @@
                 Sie erhalten in Kürze eine E-Mail um Ihren Account zu bestätigen.
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" onclick="regOkay()">Schließen</button>
+                <button type="button" class="btn btn-primary btn-log" onclick="regOkay()">Schließen</button>
             </div>
         </div>
     </div>
