Button design angepasst

--- a/Login/loginErstellen.html
+++ b/Login/loginErstellen.html
@@ -229,7 +229,7 @@
                             <button type="button" class="btn btn-secondary" id="buttonzurückLogin">Zurück</button>
                         </div>
                         <div class="col-6 text-end">
-                            <button type="button" class="btn btn-primary" onclick="chooseRegister()">Registrieren</button>
+                            <button type="button" class="btn btn-primary btn-log" onclick="chooseRegister()">Registrieren</button>
                         </div>
                     </div>
                 </div>
