nutzerdetails und stornieren und alles absagen orga

--- a/Organisation/MeineVeranstaltungen/meineVeranstaltungen.html
+++ b/Organisation/MeineVeranstaltungen/meineVeranstaltungen.html
@@ -74,6 +74,15 @@
       </div>
     </div>
   </div>
+  <div id="personDetails-container" style="display: none;">
+    <!-- Hier werden Veranstaltungen angezeigt -->
+    <div class="container">
+      <div class="row" id="userDetailsContainer">
+          <!-- Hier werden die Bootstrap Cards dynamisch eingefügt -->
+      </div>
+    </div>
+  </div>
+ 
   
   
   <!--Inhalt Ende-->
