--- a/Nutzer/Veranstaltungen/veranstaltungenEinschreiben.html
+++ b/Nutzer/Veranstaltungen/veranstaltungenEinschreiben.html
@@ -154,7 +154,7 @@
                       <button type="button" class="btn btn-secondary" onclick="goToVer()">Zurück</button>
                     </div>
                     <div class="col-6 text-end">
-                      <button type="submit" class="btn btn-secondary btn-create" id="buttonspeichern">Weiter zur Bezahlung</button>
+                      <button type="submit" class="btn btn-secondary btn-create" id="btn-payment" onclick="getLoggedInUser()">Weiter zur Bezahlung</button>
                     </div>
                   </div>
                 </div>
