--- a/Admin/Veranstaltungen/veranstaltungen.html
+++ b/Admin/Veranstaltungen/veranstaltungen.html
@@ -56,16 +56,19 @@
   </nav>
 
   <!--Inhalt-->
-  <div id="veranstaltungsgruppennichtoffen-container">
+
+
+  <!-- <div id="veranstaltungsgruppennichtoffen-container">
     <div class="container">
       <div class="row" id="veranstaltsungsgruppennichtoffen">
-        <!-- Hier werden die Bootstrap Cards dynamisch eingefügt -->
+
       </div>
     </div>
-  </div>
+  </div>-->
 
   <div id="veranstaltungsgruppen-container">
-    <div class="container">
+    <div class="container mb-3">
+      <a href="veranstaltungsgruppeerstellen.html" class="btn btn-secondary" id="veranstaltungsgruppeerstellen">Veranstaltungsgruppe erstellen</a>
       <div class="row" id="veranstaltungsgruppen">
         <!-- Hier werden die Bootstrap Cards dynamisch eingefügt -->
       </div>
