--- a/Organisation/MeineVeranstaltungen/neueveranstaltungerstellen.html
+++ b/Organisation/MeineVeranstaltungen/neueveranstaltungerstellen.html
@@ -66,9 +66,9 @@
         <div class="card-body">
           <form autocomplete="on">
             <div class="mb-3 row">
-              <label for="gruppenid" class="col-sm-3 col-form-label">Veranstaltungsgruppe:</label>
+              <label for="gruppenid" class="col-sm-3 col-form-label">Veranstaltungs-<br>gruppe:</label>
               <div class="col-sm-9">
-                <select class="form-control" id="gruppenid" name="gruppenid" required>
+                <select class="form-control " id="gruppenid" name="gruppenid" required>
                   <!-- Optionen werden dynamisch über JavaScript hinzugefügt -->
                 </select>
 
