--- a/Admin/Einstellungen/einstellungen.html
+++ b/Admin/Einstellungen/einstellungen.html
@@ -65,7 +65,7 @@
           <p class="card-text" id="telefon"></p>
           <p class="card-text" id="email"> </p>
 
-          <button id="buttonAllgInfoBearbeiten" type="button" class="btn btn-primary">Bearbeiten</button>
+          <button id="buttonAllgInfoBearbeiten" type="button" class="btn btn-secondary">Bearbeiten</button>
         </div>
       </div>
     </div>
@@ -77,7 +77,7 @@
           <h2 class="card-title">Passwort</h2>
           <p class="card-text">Ein sicheres Passwort schützt Ihre Daten: </p>
           <p class="card-text groeßererText">* * * * * * * * * * * *</p>
-          <button id="buttonPasswortaendern" type="button" class="btn btn-primary">Passwort ändern</button>
+          <button id="buttonPasswortaendern" type="button" class="btn btn-secondary">Passwort ändern</button>
         </div>
       </div>
     </div>
