--- a/Organisation/Einstellungen/einstellungen.html
+++ b/Organisation/Einstellungen/einstellungen.html
@@ -64,6 +64,7 @@
           <div class="card-body">
             <h2 class="card-title">Allgemeine Informationen</h2>
             <p class="card-text" id="name"></p>
+            <p class="card-text" id="email"></p>
             <p class="card-text" id="anschrift"></p>
             <p class="card-text" id="vornameAnsprech"></p>
             <p class="card-text" id="nachnameAnsprech"> </p>
