--- a/Admin/Veranstaltungen/veranstaltungsgruppebearbeiten.html
+++ b/Admin/Veranstaltungen/veranstaltungsgruppebearbeiten.html
@@ -92,7 +92,7 @@
                                 <textarea  class="form-control" id="beschreibung" name="beschreibung" required rows="3"></textarea>
                             </div>
                         </div>
-                    </form>
+
                 </div>
                 <div class="card-footer">
                     <div class="row justify-content-between">
@@ -102,7 +102,7 @@
                         </div>
                         <div class="col-6 text-end">
 
-                            <button type="submit" class="btn btn-secondary" id="buttonspeichern">Erstellen</button>
+                            <button type="submit" class="btn btn-secondary" id="buttonspeichern">Ändern</button>
                         </div>
                     </div>
                 </div>
@@ -113,7 +113,7 @@
 </form>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
-<script src="veranstaltungenAdmin.js"></script>
+<script src="veranstaltungsgruppebearbeiten.js"></script>
 <script src="../../logout.js"></script>
 </body>
 </html>
