--- a/Organisation/Einstellungen/einstellungenAllgInfoBearbeiten.html
+++ b/Organisation/Einstellungen/einstellungenAllgInfoBearbeiten.html
@@ -41,6 +41,8 @@
     </div>
   </nav>
 
+
+<!--richtige-->
   <div class="container mt-5">
     <div class="row justify-content-center">
       <div class="col-md-6">
@@ -48,54 +50,62 @@
           <div class="card-header mit-lightblue mit-blue fw-bold">Nutzerinformationen bearbeiten</div>
           <div class="card-body">
             <form autocomplete="on">
-                <div class="mb-3 row">
-                    <label for="vorname" class="col-sm-3 col-form-label">Vorname:</label>
-                    <div class="col-sm-9">
-                      <input type="text" class="form-control" id="vorname" name="vorname" required>
-                    </div>
-                  </div>
-                  <div class="mb-3 row">
-                    <label for="nachname" class="col-sm-3 col-form-label">Nachname:</label>
-                    <div class="col-sm-9">
-                      <input type="text" class="form-control" id="nachname" name="nachname" required>
-                    </div>
-                  </div>
-                  <div class="mb-3 row">
-                    <label for="straße" class="col-sm-3 col-form-label">Straße:</label>
-                    <div class="col-sm-9">
-                      <input type="text" class="form-control" id="straße" name="straße" required>
-                    </div>
-                  </div>
-                  <div class="mb-3 row">
-                    <label for="hausnummer" class="col-sm-3 col-form-label">Hausnummer:</label>
-                    <div class="col-sm-9">
-                      <input type="text" class="form-control" id="hausnummer" name="hausnummer" required>
-                    </div>
-                  </div>
-                  <div class="mb-3 row">
-                    <label for="postleitzahl" class="col-sm-3 col-form-label">Postleitzahl:</label>
-                    <div class="col-sm-9">
-                      <input type="text" class="form-control" id="postleitzahl" name="postleitzahl" required>
-                    </div>
-                  </div>
-                  <div class="mb-3 row">
-                    <label for="ort" class="col-sm-3 col-form-label">Ort:</label>
-                    <div class="col-sm-9">
-                      <input type="text" class="form-control" id="ort" name="ort" required>
-                    </div>
-                  </div>
-                  <div class="mb-3 row">
-                    <label for="telefonnummer" class="col-sm-3 col-form-label">Telefonnummer:</label>
-                    <div class="col-sm-9">
-                      <input type="tel" class="form-control" id="telefonnummer" name="telefonnummer" required>
-                    </div>
-                  </div>
-                  <div class="mb-3 row">
-                    <label for="email" class="col-sm-3 col-form-label">E-Mail:</label>
-                    <div class="col-sm-9">
-                      <input type="email" class="form-control" id="email" name="email" required>
-                    </div>
-                  </div>
+              <div class="mb-3 row">
+                <label for="name" class="col-sm-3 col-form-label">Organisation:</label>
+                <div class="col-sm-9">
+                  <input type="email" class="form-control" id="name" name="name" required>
+                </div>
+              </div>
+              <div class="mb-3 row">
+                <label for="email" class="col-sm-3 col-form-label">E-Mail:</label>
+                <div class="col-sm-9">
+                  <input type="email" class="form-control" id="email" name="email" required readonly>
+                </div>
+              </div>
+              <div class="mb-3 row">
+                <label for="straße" class="col-sm-3 col-form-label">Straße:</label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control" id="straße" name="straße" required>
+                </div>
+              </div>
+              <div class="mb-3 row">
+                <label for="hausnummer" class="col-sm-3 col-form-label">Hausnummer:</label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control" id="hausnummer" name="hausnummer" required>
+                </div>
+              </div>
+              <div class="mb-3 row">
+                <label for="postleitzahl" class="col-sm-3 col-form-label">Postleitzahl:</label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control" id="postleitzahl" name="postleitzahl" required>
+                </div>
+              </div>
+              <div class="mb-3 row">
+                <label for="ort" class="col-sm-3 col-form-label">Ort:</label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control" id="ort" name="ort" required>
+                </div>
+              </div>
+              <p><b>Ansprechperson</b></p>
+              <div class="mb-3 row">
+                <label for="vorname" class="col-sm-3 col-form-label">Vorname:</label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control" id="vorname" name="vorname" required>
+                </div>
+              </div>
+              <div class="mb-3 row">
+                <label for="nachname" class="col-sm-3 col-form-label">Nachname:</label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control" id="nachname" name="nachname" required>
+                </div>
+              </div>
+              <div class="mb-3 row">
+                <label for="telefonnummer" class="col-sm-3 col-form-label">Telefonnummer:</label>
+                <div class="col-sm-9">
+                  <input type="tel" class="form-control" id="telefonnummer" name="telefonnummer" required>
+                </div>
+              </div>
+
             </form>
           </div>
           <div class="card-footer">
@@ -104,7 +114,7 @@
                 <button type="button" class="btn btn-secondary" id="buttonzurückInformationenÄndern">Zurück</button>
               </div>
               <div class="col-6 text-end">
-                <button type="submit" class="btn" id="buttonspeichern" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Änderungen speichern</button>
+                <button type="submit" class="btn" id="buttonspeichern">Änderungen speichern</button>
               </div>
             </div>
           </div>
@@ -112,7 +122,6 @@
       </div>
     </div>
   </div>
-
   <!-- Modal -->
 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -126,11 +135,35 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Zurück</button>
-        <button type="button" class="btn btn-primary">Änderungen speichern</button>
+        <button type="button" class="btn btn-secondary" id="aenderungspeichern">Änderungen speichern</button>
       </div>
     </div>
   </div>
 </div>
+
+  <div class="modal" id="notificationModal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h5 class="modal-title">Benachrichtigung</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+
+        <!-- Modal Body -->
+        <div class="modal-body">
+          Dieses Feld ist schreibgeschützt und kann nicht bearbeitet werden.
+        </div>
+
+        <!-- Modal Footer -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Schließen</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
   <script src="einstellungenAllgInfo.js"></script>
