--- a/Nutzer/Einstellungen/einstellungen.html
+++ b/Nutzer/Einstellungen/einstellungen.html
@@ -125,7 +125,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Zurück</button>
-        <button type="button" class="btn btn-danger">Account löschen</button>
+        <button type="button" class="btn btn-danger" id="AccountLoeschen">Account löschen</button>
       </div>
     </div>
   </div>
