--- a/Nutzer/Einstellungen/einstellungenAllgInfoBearbeiten.html
+++ b/Nutzer/Einstellungen/einstellungenAllgInfoBearbeiten.html
@@ -28,13 +28,13 @@
             <a class="nav-link " aria-current="page" href="../Veranstaltungen/veranstaltungen.html"><h6>Veranstaltungen</h6></a>
           </div>
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-            <a class="nav-link" href="../meineVeranstaltungen/meineVeranstaltungen.html"><h6>Meine Veranstaltungen</h6></a>
+            <a class="nav-link" href="../Nutzerverwaltung/nutzerverwaltungalle.html"><h6>Nutzerverwaltung</h6></a>
           </div>
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
             <a class="nav-link mit-active" href="einstellungen.html"><h6>Einstellungen</h6></a>
           </div>
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-            <a class="nav-link" href="../impressum.html"><h6>Impressum</h6></a>
+            <a class="nav-link" href="../Impressum/impressum.html"><h6>Impressum</h6></a>
           </div>
         </div>
       </div>
@@ -48,54 +48,54 @@
           <div class="card-header mit-lightblue mit-blue fw-bold">Nutzerinformationen bearbeiten</div>
           <div class="card-body">
             <form autocomplete="on">
-                <div class="mb-3 row">
-                    <label for="vorname" class="col-sm-3 col-form-label">Vorname:</label>
-                    <div class="col-sm-9">
-                      <input type="text" class="form-control" id="vorname" name="vorname" required>
-                    </div>
-                  </div>
-                  <div class="mb-3 row">
-                    <label for="nachname" class="col-sm-3 col-form-label">Nachname:</label>
-                    <div class="col-sm-9">
-                      <input type="text" class="form-control" id="nachname" name="nachname" required>
-                    </div>
-                  </div>
-                  <div class="mb-3 row">
-                    <label for="straße" class="col-sm-3 col-form-label">Straße:</label>
-                    <div class="col-sm-9">
-                      <input type="text" class="form-control" id="straße" name="straße" required>
-                    </div>
-                  </div>
-                  <div class="mb-3 row">
-                    <label for="hausnummer" class="col-sm-3 col-form-label">Hausnummer:</label>
-                    <div class="col-sm-9">
-                      <input type="text" class="form-control" id="hausnummer" name="hausnummer" required>
-                    </div>
-                  </div>
-                  <div class="mb-3 row">
-                    <label for="postleitzahl" class="col-sm-3 col-form-label">Postleitzahl:</label>
-                    <div class="col-sm-9">
-                      <input type="text" class="form-control" id="postleitzahl" name="postleitzahl" required>
-                    </div>
-                  </div>
-                  <div class="mb-3 row">
-                    <label for="ort" class="col-sm-3 col-form-label">Ort:</label>
-                    <div class="col-sm-9">
-                      <input type="text" class="form-control" id="ort" name="ort" required>
-                    </div>
-                  </div>
-                  <div class="mb-3 row">
-                    <label for="telefonnummer" class="col-sm-3 col-form-label">Telefonnummer:</label>
-                    <div class="col-sm-9">
-                      <input type="tel" class="form-control" id="telefonnummer" name="telefonnummer" required>
-                    </div>
-                  </div>
-                  <div class="mb-3 row">
-                    <label for="email" class="col-sm-3 col-form-label">E-Mail:</label>
-                    <div class="col-sm-9">
-                      <input type="email" class="form-control" id="email" name="email" required>
-                    </div>
-                  </div>
+              <div class="mb-3 row">
+                <label for="vorname" class="col-sm-3 col-form-label">Vorname:</label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control" id="vorname" name="vorname" required>
+                </div>
+              </div>
+              <div class="mb-3 row">
+                <label for="nachname" class="col-sm-3 col-form-label">Nachname:</label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control" id="nachname" name="nachname" required>
+                </div>
+              </div>
+              <div class="mb-3 row">
+                <label for="straße" class="col-sm-3 col-form-label">Straße:</label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control" id="straße" name="straße" required>
+                </div>
+              </div>
+              <div class="mb-3 row">
+                <label for="hausnummer" class="col-sm-3 col-form-label">Hausnummer:</label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control" id="hausnummer" name="hausnummer" required>
+                </div>
+              </div>
+              <div class="mb-3 row">
+                <label for="postleitzahl" class="col-sm-3 col-form-label">Postleitzahl:</label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control" id="postleitzahl" name="postleitzahl" required>
+                </div>
+              </div>
+              <div class="mb-3 row">
+                <label for="ort" class="col-sm-3 col-form-label">Ort:</label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control" id="ort" name="ort" required>
+                </div>
+              </div>
+              <div class="mb-3 row">
+                <label for="telefonnummer" class="col-sm-3 col-form-label">Telefonnummer:</label>
+                <div class="col-sm-9">
+                  <input type="tel" class="form-control" id="telefonnummer" name="telefonnummer" required>
+                </div>
+              </div>
+              <div class="mb-3 row">
+                <label for="email" class="col-sm-3 col-form-label">E-Mail:</label>
+                <div class="col-sm-9">
+                  <input type="email" class="form-control" id="email" name="email" required>
+                </div>
+              </div>
             </form>
           </div>
           <div class="card-footer">
@@ -113,24 +113,23 @@
     </div>
   </div>
 
-  <!-- Modal -->
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h3 class="modal-title fs-5" id="staticBackdropLabel">Informationen ändern</h3>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <p>Wollen Sie Ihre Informationen wirklich ändern?</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Zurück</button>
-        <button type="button" class="btn btn-primary">Änderungen speichern</button>
+  <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h3 class="modal-title fs-5" id="staticBackdropLabel">Informationen ändern</h3>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>Wollen Sie Ihre Informationen wirklich ändern?</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Zurück</button>
+          <button type="button" class="btn btn-secondary" id="aenderungspeichern">Änderungen speichern</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
   <script src="einstellungenAllgInfo.js"></script>
