Alle Modals und letzte Fixes

--- a/Nutzer/meineVeranstaltungen/meineVeranstaltungen.html
+++ b/Nutzer/meineVeranstaltungen/meineVeranstaltungen.html
@@ -74,6 +74,42 @@
       </div>
     </div>
   </div>
+
+  <div class="modal fade" id="stornoModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h3 class="modal-title fs-5" id="staticBackdropLabel">Veranstaltung stornieren</h3>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>Möchten Sie die Veranstaltung wirklich stornieren?</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Zurück</button>
+          <button type="button" id="confirmDeleteBtn" class="btn btn-danger" >Stornieren</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="stornoModalAll" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h3 class="modal-title fs-5" id="staticBackdropLabel">Veranstaltung für alle stornieren</h3>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>Möchten Sie für alle die Veranstaltung wirklich stornieren?</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Zurück</button>
+          <button type="button" id="confirmDeleteAllBtn" class="btn btn-danger" >Stornieren</button>
+        </div>
+      </div>
+    </div>
+  </div>
   
   <!--Inhalt Ende-->
 
