--- a/Login/loginErstellen.html
+++ b/Login/loginErstellen.html
@@ -217,7 +217,7 @@
                         <div class="form-check mb-3">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" required>
                             <label class="form-check-label" for="flexCheckDefault">
-                                Akzeptieren Sie die AGB?
+                                Indem Sie auf „Registrieren“ klicken, stimmen Sie unseren Nutzungsbedingungen zu. In unserer Datenschutzrichtlinie erfahren Sie, wie wir Ihre Daten erfassen, verwenden und teilen. Unsere Cookie-Richtlinie erklärt, wie wir Cookies und ähnliche Technologien verwenden.
                             </label>
                         </div>
 
