--- a/Nutzer/Einstellungen/einstellungen.html
+++ b/Nutzer/Einstellungen/einstellungen.html
@@ -46,7 +46,7 @@
             </a>
           </div>
           <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-            <a class="nav-link" href="../impressum.html">
+            <a class="nav-link" href="../Impressum/impressum.html">
               <h6>Impressum</h6>
             </a>
           </div>
