--- a/Nutzer/Impressum/impressum.html
+++ b/Nutzer/Impressum/impressum.html
@@ -7,12 +7,12 @@
     <title>Impressum</title>
     <!-- Bootstrap CSS --> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../../main.css">
 </head>
 <body>
     <div class="jumbotron mit-lightblue text-center headpad position-relative">
-      <a class="position-absolute h6 top-0 end-0 m-3 mit-blue" id="a-deco" href="#" onclick="postLogout()">Logout <img src="../Bilder/nutzer.png" alt="Nutzer icon" class="mit-head"></a>
-        <h1 class="display-5 fw-bold mit-blue">Veranstaltungen <img src="../Bilder/ZwingenbergWappen.png" alt="Zwingenberg Wappen" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
+      <a class="position-absolute h6 top-0 end-0 m-3 mit-blue" id="a-deco" href="#" onclick="postLogout()">Logout <img src="../../Bilder/nutzer.png" alt="Nutzer icon" class="mit-head"></a>
+        <h1 class="display-5 fw-bold mit-blue">Veranstaltungen <img src="../../Bilder/ZwingenbergWappen.png" alt="Zwingenberg Wappen" class="img-fluid align-middle mr-2 mit-head"> Zwingenberg</h1>
     </div>
     <nav class="navbar navbar-expand-sm navbar-light py-sm-1">
       <div class="container-fluid">
@@ -24,13 +24,13 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav w-100 justify-content-between">
             <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-              <a class="nav-link " aria-current="page" href="Veranstaltungen/veranstaltungen.html"><h6>Veranstaltungen</h6></a>
+              <a class="nav-link " aria-current="page" href="../Veranstaltungen/veranstaltungen.html"><h6>Veranstaltungen</h6></a>
             </div>
             <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-              <a class="nav-link" href="meineVeranstaltungen/meineVeranstaltungen.html"><h6>Meine Veranstaltungen</h6></a>
+              <a class="nav-link" href="../meineVeranstaltungen/meineVeranstaltungen.html"><h6>Meine Veranstaltungen</h6></a>
             </div>
             <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
-              <a class="nav-link" href="Einstellungen/einstellungen.html"><h6>Einstellungen</h6></a>
+              <a class="nav-link" href="../Einstellungen/einstellungen.html"><h6>Einstellungen</h6></a>
             </div>
             <div class="mx-auto px-3"> <!-- Füge hier den linken und rechten Abstand hinzu -->
               <a class="nav-link mit-active" href="impressum.html"><h6>Impressum</h6></a>
